--- a/src/components/ PixabayAPI/Searchbar/Searchbar.module.css
+++ b/src/components/ PixabayAPI/Searchbar/Searchbar.module.css
@@ -3,8 +3,9 @@
   align-items: center;
   justify-content: center;
   height: 50px;
-  width: 100%;
+  max-width: 100%;
   background-color: rgb(43, 77, 229);
+  margin-bottom: 16px;
 }
 
 .inputWrapper {
